--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
     "rimraf": "^5.0.7",
